[gd_scene load_steps=4 format=3 uid="uid://b7vjkbti3ify8"]

[ext_resource type="Script" path="res://scripts/common/hanging_weight.gd" id="1_vd43m"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_griq8"]
size = Vector2(116, 68)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7jp3b"]
size = Vector2(114, 8)

[node name="hanging_weight" type="Node2D"]
script = ExtResource("1_vd43m")

[node name="weight_rigidbody" type="RigidBody2D" parent="."]
position = Vector2(0, -33)
mass = 50.0
sleeping = true
can_sleep = false
freeze = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="weight_rigidbody"]
shape = SubResource("RectangleShape2D_griq8")

[node name="heavy_object" type="Area2D" parent="weight_rigidbody"]

[node name="weight_shape" type="CollisionShape2D" parent="weight_rigidbody/heavy_object"]
position = Vector2(0, 33)
shape = SubResource("RectangleShape2D_7jp3b")
